added components for comments, added page numbers for profile
